allow GET user for any user

--- a/config.json
+++ b/config.json
@@ -197,7 +197,7 @@
     },
     "user": {
       "code": "03",
-      "GET": "self",
+      "GET": "any",
       "PUT": "self",
       "fields": {
         "name": {
