allow GET user/posts for any users

--- a/config.json
+++ b/config.json
@@ -236,7 +236,7 @@
         },
         "posts": {
           "contains": ["post"],
-          "GET": "self",
+          "GET": "any",
           "POST": "self",
           "DELETE": "self"
         },
