allow get post/offended

--- a/config.json
+++ b/config.json
@@ -512,7 +512,7 @@
         },
         "offended": {
           "contains": ["user"],
-          "GET": "admin_role",
+          "GET": "any",
           "POST": "registered_user"
         }
       }
