allow DELETE user/posts for admin

--- a/config.json
+++ b/config.json
@@ -237,7 +237,8 @@
         "posts": {
           "contains": ["post"],
           "GET": "any",
-          "POST": "self"
+          "POST": "self",
+          "DELETE": "admin_role"
         },
         "timeline": {
           "contains": ["post"],
